kub.deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    app: kub
    name: kub
  name: kub
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/kub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kub
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kub
    spec:
      containers:
      - image: msrn/kub:v5
        imagePullPolicy: IfNotPresent
        name: kub
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
