kub.pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: demo
    name: kub
  name: kub
spec:
  containers:
  - image: msrn/kub:v5
    imagePullPolicy: Always
    name: kub
    ports:
    - containerPort: 5000
      name: http
      protocol: TCP
