mongo.pod.yaml
apiVersion: v1 
kind: Pod
metadata: 
  name: db
  labels:
   name: mongo
   app: web
spec:
  containers:
  - image: mongo
    name: mongo
    ports:
    - name: mongo
      containerPort: 27017
      hostPort: 27017
    volumeMounts:
    - name: mongo-storage
      mountPath: /data/db
  volumes:
    - name: mongo-storage
    #  hostPath: 
    #    path: /var/lib/data
      #gcePersistentDisk:
      #  pdName: gce-disk
      #  fsType: ext4
      persistentVolumeClaim:
        claimName: disk-claim-5
