kub.service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web
    name: kub-m
  name: kub-m
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: web
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
